--- a/colab.ipynb
+++ b/colab.ipynb
@@ -6927,7 +6927,16 @@
         "from matplotlib import cm\n",
         "\n",
         "plt.imsave('4_1i.jpg', images_res[3])\n",
-        "plt.imsave('4_1t.jpg', output[3], cmap = cm.gray)"
+        "plt.imsave('4_1t.jpg', output[3], cmap = cm.gray)\n",
+        "\n",
+        "##image inpainting\n",
+        "\n",
+        "#img = cv2.imread('origin.jpg')\n",
+        "#mask = cv2.imread('mask.jpg', 0)\n",
+        "\n",
+        "#paint = cv2.inpaint(img, mask, 100, cv2.INPAINT_TELEA)\n",
+        "\n",
+        "#cv2.imwrite('output.jpg', paint)"
       ]
     },
     {
